# mindboggle

./: .coveragerc  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis.ymlOLD  CHANGELOG  CHANGES  CNAME  INSTALL  INSTALL.rst  INSTALL2  INSTALL_source  LABELS  LABELS.rst  LICENSE  LICENSE.rst  MANIFEST.in  MomentInvariants.py  README  README.rst  README.txt  STORY.rst  THANKS  THANKS.rst  Vagrantfile  atlas_based.py  atlas_functions.py  atlases.py  build_docs.py  build_mindboggle  circle.yml  combine_labels.py  data.html  documentation.html  environment.yml  feature_based.py  features.py  genindex.html  glossary.html  (+35 more)
.circleci/: config.yml
Mindboggle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_sources/: data.txt  documentation.txt  glossary.txt  howto_make_html.txt  index.txt  papers.txt  people.txt  talks.txt
_static/: default.css
api/: index.html  index.html.bk
braincolor/: README.md  about.html  index.html
colormap/: label_adjacency_matrix.csv  label_colormap.csv  label_colormap.json  label_colormap.xml
colors_script/: calc_colormap.py  convert_to_mipav_lut.py
data/: index.html  index.html~
database/: README.md  base.py  neo4j.gremlin.py  query.py  scripts.py  upload.py
db/: upload.py
debian/: changelog  control  copyright  gbp.conf  rules  watch
doc/: Makefile  README  README.txt  conf.py  data.rst  documentation.rst  glossary.rst  history.rst  howto_document.rst  index.html  index.rst  license.rst  links.txt  links_names.txt  make_html.sh  make_html2.txt  make_html_followup.sh  mission.rst  mission.txt  papers.rst  people.rst  publications.rst
docs/: API.rst  LABELS.rst  Makefile  README.rst  api.rst  api_build.py  api_build.sh  conf.py  data.html  faq.rst  howto_document.html  howto_make_html.html  index.rst  index.rst~  labels.rst  license.rst  mindboggle_tutorial.ipynb  mindboggle_tutorial_MIT_workshop.ipynb  papers.html  people.html  readme.rst  requirements.txt  thanks.rst  viz.ipynb
dti/: README.txt
eliezer's code/: vtk_operations.py
evaluate/: avg.py  count_landmarks.py  landmark_to_labelborder_distances.py  tex2vtk.py
evaluation/: run_registrations.py
extract/depth/: BrainMeshing.cpp  CMakeLists.txt  FsSurfaceReader.cpp  LICENSE  MeshAnalyser.cpp  MeshAnalyser.h  meshTest.cpp
faq/: index.html  index.html.bk  labels.html  labels.html.bk  why_license.html  why_mindboggle.html  why_mindboggle.html.bk  why_python.html
feature_matching/: BayesClassifier_razlighi_201006.py
html/: .buildinfo  data.html  documentation.html  genindex.html  howto_document.html  howto_make_html.html  index.html  objects.inv  papers.html  people.html  py-modindex.html  search.html  searchindex.js  talks.html
install/: Dockerfile  Dockerfile.mindboggle.base  Dockerfile.mindboggle.complete  Singularity  Vagrantfile  build_mindboggle_vm.sh  configure_mindboggle_vm  install_mindboggle.sh  install_mindboggle_vm  neurodocker.sh  reprozip_container.sh  vm.json
label/: propagate_volume_labels.py
mbdb/: base.py  interface.py  upload.py
mindboggle/: #temp.txt#  .buildinfo  DATA.py  LABELS.py  LUT.py  Makefile  OASIS-TRT-20_template_to_MNI152_T1_1mm_brainAffine.txt  __init__.py  atlas_functions.py  data.py  dist_pkg_info.py  feature_functions.py  info.py  labels.py  make.bat  mindboggle  mindboggle.py  mindboggle123  mindboggler.py  objects.inv  pipeline.py  pkg_info.py  rot1_OASIS-TRT-20_template.nii.gz.txt  run_mindboggle101.py  searchindex.js  settings.py  surface_functions.py  version.py  volume_functions.py
mindboggle/measure/surface_measures/: CMakeLists.txt  FsSurfaceReader.h  Overlap.cpp  TravelDepth.h  VtkFileEditor.cpp  measure_functions.py
mindboggle/measure/surface_measures/area/: PointAreaMain.cpp
mindboggle/measure/surface_measures/curvature/: CurvatureMain.cpp
mindboggle/measure/surface_measures/surface_overlap/: CMakeLists.txt  SurfaceOverlapMain.cpp
mindboggle/measure/surface_measures/travel_depth/: CMakeLists.txt  TravelDepthMain.cpp
mindboggle_cpp/: CMakeLists.txt  Overlap.h  TravelDepth.cpp
mindboggle_tools/: CMakeLists.txt  FsSurfaceReader.cpp  GradientComputer.cpp  GradientComputer.h  MeshAnalyser.cpp  MeshAnalyser.h  Overlap.cpp  Overlap.h  PointAreaComputer.cpp  PointAreaComputer.h  README  TravelDepth.cpp  VtkFileEditor.h  colormap.xml
mindboggle_tools/medial_surfaces/: CMakeLists.txt  MedialSurfaceComputer.cpp
pipeline/: graph.dot  graph_detailed.dot
propagate/: PyShape.py  kernels.py
publication/: ._Razlighi_v5.docx  NeuroImage2011_v2.docx  (+1 more)
surface_cpp_tools/: CMakeLists.txt  FsSurfaceReader.cpp  GradientComputer.cpp  MeshAnalyser.cpp  PointAreaComputer.cpp  PointAreaComputer.h  TravelDepth.cpp
surface_cpp_tools/area/: CMakeLists.txt  PointAreaMain.cpp
surface_cpp_tools/curvature/: CMakeLists.txt
surface_cpp_tools/geodesic_depth/: CMakeLists.txt  GeodesicDepthMain.cpp
surface_cpp_tools/gradient/: CMakeLists.txt  GradientMain.cpp
surface_cpp_tools/medial_surfaces/: CMakeLists.txt  MedialSurfaceComputer.cpp  MedialSurfaceMain.cpp
surface_cpp_tools/surface_overlap/: CMakeLists.txt  SurfaceOverlapMain.cpp
surface_cpp_tools/travel_depth/: CMakeLists.txt
surface_travel_depth/: BrainMeshing.h  CMakeLists.txt  CMakeLists.txt.user.2.3pre1  MedialSurfaceComputer.cpp  MedialSurfaceComputer.h  MeshAnalyser.cpp  MeshAnalyser.h
surface_travel_depth/medial_surface/: CMakeLists.txt
surface_travel_depth/travel_depth/: CMakeLists.txt
vtk_cpp_tools/: CMakeLists.txt  FsSurfaceReader.cpp  GradientComputer.cpp  MeshAnalyser.cpp  MeshAnalyser.h  PointAreaComputer.cpp  PointAreaComputer.h
vtk_cpp_tools/area/: CMakeLists.txt  PointAreaMain.cpp
vtk_cpp_tools/curvature/: CMakeLists.txt  CurvatureMain.cpp
vtk_cpp_tools/geodesic_depth/: CMakeLists.txt  GeodesicDepthMain.cpp
vtk_cpp_tools/gradient/: CMakeLists.txt  GradientMain.cpp
vtk_cpp_tools/medial_surfaces/: CMakeLists.txt  MedialSurfaceComputer.cpp  MedialSurfaceMain.cpp
vtk_cpp_tools/surface_overlap/: CMakeLists.txt  SurfaceOverlapMain.cpp
vtk_cpp_tools/travel_depth/: CMakeLists.txt  TravelDepthMain.cpp
x/: run.py  (+7 more)
(+9457 files in other folders)
